@@ -442,7 +442,7 @@
     <version release="gnome-2.12">
       <component name="evolution" dir="evolution" group="desktop">
         <podir dir="po"/>
-        <potname name="evolution-2.2.pot"/>
+        <potname name="evolution-2.4.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
@@ -473,7 +473,7 @@
     <version release="gnome-2.12">
       <component name="evolution-data-server" dir="evolution-data-server" group="desktop">
         <podir dir="po"/>
-        <potname name="evolution-data-server-1.2.pot"/>
+        <potname name="evolution-data-server-1.4.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
@@ -493,7 +493,7 @@
     <version release="gnome-2.12">
       <component name="evolution-exchange" dir="evolution-exchange" group="desktop">
         <podir dir="po"/>
-        <potname name="ximian-connector-2.2.pot"/>
+        <potname name="evolution-exchange-2.4.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
