@@ -1,3 +1,8 @@
+2005-0528  Funda Wang  <fundawang@linux.net.cn>
+
+	* translation-status.xml: bumped GETTEXT_PACKAGE for evolution,
+	  evolution-data-server, evolution-exchange.
+
 2005-05-19  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* translation-status.xml: libgnomecanvas branched for gnome-2-10.
